--- a/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/Page6_V11.html
+++ b/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/Page6_V11.html
@@ -15,8 +15,8 @@
 		.titleText{position:absolute;left:145px;top:9px;color:#000000;font-family:Tahoma;}
 		#looksSounds{
 			position:absolute;
-			top:50px;left:70px;
-			height:600px;width:825px;
+			top:50px;left:150px;
+			height:600px;width:725px;
 			color:#ffffff;font-size:42px;font-family:Tahoma;
 		}
 		#goal{
@@ -39,12 +39,7 @@
 			position:fixed;height:100%;width:100%;left:0px;top:0px;opacity:.9;visibility:hidden;background:#C0C0C0;
 		}
 		#modalWindow{
-			position:fixed;height:400px;width:750px;left:100px;top:100px;visibility:hidden;background:#FFFFCC;
-		}
-		.inModal{
-			position:relative;float:left;width:100%;
-			height:40px;color:#ffffff;font-size:22px;
-			padding-top:7px; text-indent:10px;
+			position:fixed;height:450px;width:650px;left:200px;top:100px;visibility:hidden;background:#FFFFCC;
 		}
 	</style>
 </head>
@@ -66,11 +61,9 @@
 		<div id="AnnotateLeft"></div>
 		<div id="AnnotateRight"></div>
 	</div>
+	
 	<div id="greyModal" class="hid"></div>
-	<div id="modalWindow" class="hid">
-		<div id="" class="inModal" style="background:#000000;">Lesson Note</div>
-		<div id="" class="inModal" style="background:#ADD692;">How to save your annotations</div>
-	</div>
+	<div id="modalWindow" class="hid"></div>
 	<img onclick="ln();" src="Page6Ln.png" style="position:fixed;top:1px;left:15px;height:37px;width:37px;cursor:pointer;" />
 	<script>
 		var isHidden=true;
