--- a/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/V13_page8.html
+++ b/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/V13_page8.html
@@ -13,66 +13,41 @@
 	<style>
 		.topTitle{position:fixed;top:0px;right:0px;left:0px;height:39px;background:#006600;font-weight:bold;}
 		.titleText{position:absolute;left:145px;top:9px;color:#000000;font-family:Tahoma;}
-		#looksSounds{
-			position:absolute;
-			top:50px;left:70px;
-			height:600px;width:825px;
-			color:#ffffff;font-size:42px;font-family:Tahoma;
+		#rateYourWords{position:fixed;top:50px;left:25px;font-size:38px;font-family:Tahoma;color:#000000;}
+		#Words{position:fixed;top:125px;left:75px;font-size:38px;font-family:Tahoma;color:#000000;}
+		.word{
+			position:relative;width:400px;margin-bottom:20px;border:1px solid #006600;
+			padding-top:8px;padding-left:8px;padding-bottom:8px;border-radius:8px;
+			background:#006600;
 		}
-		#goal{
-			position:absolute;
-			top:0px;left:0px;
-			width:100%;background:#C3D69B;
-			text-indent:8px;
-		}
-		#looksLike{background:#558ED5;}
-		#soundsLike{background:#558ED5;}
-		#looksLike,#soundsLike{text-indent:63px;}
-		#goal,#looksLike,#soundsLike{height:60px;}
-		#AnnotateLeft,#AnnotateRight{background:#DCE6F2;height:490px;}
-		#looksLike,#soundsLike,#AnnotateLeft,#AnnotateRight{width:49.58%;}
-		#looksLike,#AnnotateLeft{left:0px;}
-		#soundsLike,#AnnotateRight{right:0px;}
-		#looksLike,#soundsLike,#AnnotateLeft,#AnnotateRight,#goal{position:relative;float:left;margin-bottom:5px;padding-top: 4px;}
-		#soundsLike,#AnnotateRight{float:right;}
-		#greyModal{
-			position:fixed;height:100%;width:100%;left:0px;top:0px;opacity:.9;visibility:hidden;background:#C0C0C0;
-		}
-		#modalWindow{
-			position:fixed;height:400px;width:750px;left:100px;top:100px;visibility:hidden;background:#FFFFCC;
-		}
-		.inModal{
-			position:relative;float:left;width:100%;
-			height:40px;color:#ffffff;font-size:22px;
-			padding-top:7px; text-indent:10px;
-		}
+		.substance{}
 	</style>
 </head>
 <body>
 	<div class="topTitle" style="background:#ADD692;">
-		<div class="titleText">Team Cooperation Goal</div>
+		<div class="titleText">Vocabulary Review</div>
 	</div>
-	
-	
-    <input type="hidden" id="pageType" value="1" />
+    <img onclick="ln();" src="Page6Ln.png" style="position:fixed;top:1px;left:15px;height:37px;width:37px;cursor:pointer;" />
+	<input type="hidden" id="pageType" value="1" />
     <input type="hidden" id="pageSize" value="690" />    
     <canvas style="position:absolute;top:100px;left:0px;z-index:5;" id="canvas1" name="drawableCanvas"></canvas>
     <iframe id="toc" src="TOC.html" style="display:none;"></iframe>
 	
-	<div id="looksSounds">
-		<div id="goal">Goal:</div>
-		<div id="looksLike">Looks Like</div>
-		<div id="soundsLike">Sounds Like</div>
-		<div id="AnnotateLeft"></div>
-		<div id="AnnotateRight"></div>
+	<div id="rateYourWords">Rate Your Words</div>
+	<div id="Words">
+		<div onclick="wordDefinition(this,0);" class="word">noticed</div>
+		<div onclick="wordDefinition(this,1);" class="word">sniffed</div>
+		<div onclick="wordDefinition(this,2);"class="word">muttered</div>
+		<div onclick="wordDefinition(this,3);" class="word">innocent</div>
+		<div onclick="wordDefinition(this,4);" class="word">whole</div>
+		<div onclick="wordDefinition(this,5);" class="word">consume</div>
 	</div>
-	<div id="greyModal" class="hid"></div>
-	<div id="modalWindow" class="hid">
-		<div id="" class="inModal" style="background:#000000;">Lesson Note</div>
-		<div id="" class="inModal" style="background:#ADD692;">How to save your annotations</div>
-	</div>
-	<img onclick="ln();" src="Page6Ln.png" style="position:fixed;top:1px;left:15px;height:37px;width:37px;cursor:pointer;" />
+	
 	<script>
+		function wordDefinition(word,k){
+			word.style.backgroundColor="transparent";
+		}	
+	
 		var isHidden=true;
 		function ln(){
 			if(isHidden){
