--- a/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/V9_Page6.html
+++ b/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/V9_Page6.html
@@ -15,8 +15,8 @@
 		.titleText{position:absolute;left:145px;top:9px;color:#000000;font-family:Tahoma;}
 		#looksSounds{
 			position:absolute;
-			top:50px;left:70px;
-			height:600px;width:825px;
+			top:50px;left:150px;
+			height:600px;width:725px;
 			color:#ffffff;font-size:42px;font-family:Tahoma;
 		}
 		#goal{
@@ -25,34 +25,27 @@
 			width:100%;background:#C3D69B;
 			text-indent:8px;
 		}
-		#looksLike{background:#558ED5;}
-		#soundsLike{background:#558ED5;}
+		#looksLike{
+			background:#558ED5;
+		}
+		#soundsLike{
+			background:#558ED5;
+		}
 		#looksLike,#soundsLike{text-indent:63px;}
 		#goal,#looksLike,#soundsLike{height:60px;}
+		
 		#AnnotateLeft,#AnnotateRight{background:#DCE6F2;height:490px;}
 		#looksLike,#soundsLike,#AnnotateLeft,#AnnotateRight{width:49.58%;}
 		#looksLike,#AnnotateLeft{left:0px;}
 		#soundsLike,#AnnotateRight{right:0px;}
 		#looksLike,#soundsLike,#AnnotateLeft,#AnnotateRight,#goal{position:relative;float:left;margin-bottom:5px;padding-top: 4px;}
 		#soundsLike,#AnnotateRight{float:right;}
-		#greyModal{
-			position:fixed;height:100%;width:100%;left:0px;top:0px;opacity:.9;visibility:hidden;background:#C0C0C0;
-		}
-		#modalWindow{
-			position:fixed;height:400px;width:750px;left:100px;top:100px;visibility:hidden;background:#FFFFCC;
-		}
-		.inModal{
-			position:relative;float:left;width:100%;
-			height:40px;color:#ffffff;font-size:22px;
-			padding-top:7px; text-indent:10px;
-		}
 	</style>
 </head>
 <body>
 	<div class="topTitle" style="background:#ADD692;">
 		<div class="titleText">Team Cooperation Goal</div>
 	</div>
-	
 	
     <input type="hidden" id="pageType" value="1" />
     <input type="hidden" id="pageSize" value="690" />    
@@ -66,26 +59,6 @@
 		<div id="AnnotateLeft"></div>
 		<div id="AnnotateRight"></div>
 	</div>
-	<div id="greyModal" class="hid"></div>
-	<div id="modalWindow" class="hid">
-		<div id="" class="inModal" style="background:#000000;">Lesson Note</div>
-		<div id="" class="inModal" style="background:#ADD692;">How to save your annotations</div>
-	</div>
-	<img onclick="ln();" src="Page6Ln.png" style="position:fixed;top:1px;left:15px;height:37px;width:37px;cursor:pointer;" />
-	<script>
-		var isHidden=true;
-		function ln(){
-			if(isHidden){
-				document.getElementById('greyModal').style.visibility="visible";
-				document.getElementById('modalWindow').style.visibility="visible";
-				isHidden=false;
-			}else{
-				document.getElementById('greyModal').style.visibility='hidden';
-				document.getElementById('modalWindow').style.visibility='hidden';
-				isHidden=true;
-			}
-			
-		}
-	</script>
+	
 </body>
 </html>
