--- a/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/Z1Page6.html
+++ b/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/Z1Page6.html
@@ -29,7 +29,7 @@
 		#soundsLike{background:#558ED5;}
 		#looksLike,#soundsLike{text-indent:63px;}
 		#goal,#looksLike,#soundsLike{height:52px;}
-		#AnnotateLeft,#AnnotateRight{background:#DCE6F2;height:82%;min-height:400px;}
+		#AnnotateLeft,#AnnotateRight{background:#DCE6F2;height:82%;}
 		#looksLike,#soundsLike,#AnnotateLeft,#AnnotateRight{width:49.58%;}
 		#looksLike,#AnnotateLeft{left:0px;}
 		#soundsLike,#AnnotateRight{right:0px;}
