--- a/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/C1Page1.html
+++ b/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/C1Page1.html
@@ -10,7 +10,7 @@
 	<script src="../../../../../../Shared/Scripts/contentPage.js" type="text/javascript"></script>
 	<script src="../../../../../../Shared/Scripts/canvas.js" type='text/javascript'></script>
 	<style>
-		.topTitle{position:fixed;top:0px;right:22px;left:4px;height:37px;background:#006600;font-weight:bold;}
+		.topTitle{position:fixed;top:0px;right:0px;left:0px;height:37px;background:#006600;font-weight:bold;}
 		.titleText{position:absolute;left:163px;top:9px;color:#000000;font-family:Tahoma;}
 		.knowIt{
 			position:absolute;
@@ -40,7 +40,8 @@
 			color:#00AA30;
 		}
 		.vocabWords{
-			width:1000px;
+			height:100%;
+			width:100%;
 			position:absolute;
 			left:195px;
 			top:283px;
@@ -67,13 +68,12 @@
     <input type="hidden" id="pageSize" value="690" />   
 	<iframe id="toc" src="TOC.html" style="display:none;"></iframe>
 	
+	<canvas id="canvas1" name="drawableCanvas" height="680" width="960" style="z-index:8;background:transparent;position:fixed;top:1px;left:1px;">
+	</canvas>
+	
 	<div class="topTitle" style="background:#ADD692;">
 		<div class="titleText">Rate Your Vocabulary</div>
 	</div>
-	
-<div style="position:fixed;top:0px;bottom:40px;overflow:auto;width:100%;overflow-x:hidden;overflow-y:scroll;z-index:2;">	
-	<canvas id="canvas1" name="drawableCanvas" height="680" width="960" style="z-index:8;background:transparent;position:absolute;top:1px;left:1px;">
-	</canvas>
 	<div class="knowIt">
 		<div class="kI">+ Know It</div>
 		<div class="nS">? Not Sure</div>
@@ -90,9 +90,5 @@
 			<div class="fN">consumed</div>
 		</div>	
 	</div>
-</div>
-	
-	
-	
 </body>
 </html>
