--- a/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/C1Page2.html
+++ b/.SFAF/Math/Grade4/Unit1/TheMysteryoftheMissingLunch/Cycles/Cycle1/backup/C1Page2.html
@@ -9,23 +9,17 @@
 	<link href="../../../../../../Shared/Fonts/stylesheet.css" rel="stylesheet" type="text/css" charset="utf-8">
 	<script src="../../../../../../Shared/Scripts/contentPage.js" type="text/javascript"></script>
 	<script src="../../../../../../Shared/Scripts/canvas.js" type='text/javascript'></script>
-	<style>
 	
-	</style>
 </head>
 <body style="background-color:transparent;">
 	
     <input type="hidden" id="pageType" value="1" />
     <input type="hidden" id="pageSize" value="690" />   
 	<iframe id="toc" src="TOC.html" style="display:none;"></iframe>
-
-<div style="position:fixed;top:0px;bottom:40px;overflow:auto;width:100%;overflow-x:hidden;overflow-y:scroll;z-index:2;">
-	<canvas id="canvas1" name="drawableCanvas" height="680" width="960" style="z-index:8;background:transparent;position:absolute;top:1px;left:1px;">
-	</canvas>
-</div>
 	
-	<div class="imgDiv" style="position:fixed;top:0px;left:4px;right:22px;bottom:40px;">
-		<img src="Page2_MM4-1_Cover_LetsExplore.png" style="position:absolute;height:100%;width:100%;" />
-	</div>
+	<canvas id="canvas1" name="drawableCanvas" height="680" width="960" style="z-index:8;background:transparent;position:fixed;top:1px;left:1px;">
+	</canvas>
+	<img src="Page2_MM4-1_Cover_LetsExplore.png" style="position:fixed;top:0px;left:0px;height:691px;width:100%;" />
+	
 </body>
 </html>
